--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: java
 sudo: false # faster builds
-dist: bionic
+dist: focal
+virt: vm
+group: edge
 
+arch:
+  - amd64
+  - arm64-graviton
 jdk:
   - openjdk11
   - openjdk8
@@ -13,6 +18,11 @@ install: true
 before_script:
   - if [ "$TRAVIS_JDK_VERSION" == "openjdk8" ]; then
     export IMAGE_NAME="openjdk:8u212-jre-alpine";
+    if [ "${TRAVIS_CPU_ARCH}" == "arm64" ]; then
+    sudo apt-get install openjdk-8-jdk;
+    export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-arm64;
+    export PATH=$JAVA_HOME:$PATH;
+    fi
     fi
   - if [ "$TRAVIS_JDK_VERSION" == "openjdk11" ]; then
     export IMAGE_NAME="openjdk:11-jre-stretch";
